--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
   flutter_layout_grid: ^0.10.1
   flutter_svg: ^0.17.4
   google_fonts: ^1.1.0
+  simple_animations: ^1.3.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,6 +49,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
